--- a/src/Asmin/Asmin.Business/Asmin.Business.csproj
+++ b/src/Asmin/Asmin.Business/Asmin.Business.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Asmin.Core\Asmin.Core.csproj" />
     <ProjectReference Include="..\Asmin.DataAccess\Asmin.DataAccess.csproj" />
     <ProjectReference Include="..\Asmin.Entities\Asmin.Entities.csproj" />
   </ItemGroup>
