--- a/src/Asmin/Asmin.Business/Asmin.Business.csproj
+++ b/src/Asmin/Asmin.Business/Asmin.Business.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1" />
   </ItemGroup>
 
   <ItemGroup>
