changed user and other entities namespace

--- a/src/Asmin/Asmin.DataAccess/Asmin.DataAccess.csproj
+++ b/src/Asmin/Asmin.DataAccess/Asmin.DataAccess.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Asmin.Core\Asmin.Core.csproj" />
     <ProjectReference Include="..\Asmin.Entities\Asmin.Entities.csproj" />
   </ItemGroup>
 
