--- a/src/Asmin/Asmin.WebAPI/Properties/launchSettings.json
+++ b/src/Asmin/Asmin.WebAPI/Properties/launchSettings.json
@@ -1,5 +1,4 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,22 +7,30 @@
       "sslPort": 44389
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/users",
+    "Development": {
+      "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASMIN_ENVIRONMENT": "development"
       }
     },
-    "Asmin.WebAPI": {
+    "Staging": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/users",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASMIN_ENVIRONMENT": "staging"
+      }
+    },
+    "Test": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASMIN_ENVIRONMENT": "test"
+      }
+    },
+    "Production": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASMIN_ENVIRONMENT": "production"
       }
     }
   }
