--- a/src/Asmin/Asmin.Core/appsettings.staging.json
+++ b/src/Asmin/Asmin.Core/appsettings.staging.json
@@ -4,5 +4,11 @@
     "Port": "0",
     "Username": "username",
     "Password": "password"
+  },
+  "RabbitMQ": {
+    "Host": "rabbitmqhost",
+    "Port": "0",
+    "Username": "username",
+    "Password": "password"
   }
 }
