--- a/src/Asmin/Asmin.Packages.Cachings.Redis/Asmin.Packages.Cachings.Redis.csproj
+++ b/src/Asmin/Asmin.Packages.Cachings.Redis/Asmin.Packages.Cachings.Redis.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="StackExchange.Redis" Version="2.1.30" />
+  </ItemGroup>
+
 </Project>
