--- a/src/Asmin/Asmin.Core/appsettings.staging.json
+++ b/src/Asmin/Asmin.Core/appsettings.staging.json
@@ -10,5 +10,10 @@
     "Port": "0",
     "Username": "username",
     "Password": "password"
+  },
+  "MinIO": {
+    "EndPoint": "miniohost",
+    "AccessKey": "accesskey",
+    "SecretKey": "secretkey"
   }
 }
