--- a/src/Asmin/Asmin.Packages.AOP/Asmin.Packages.AOP.csproj
+++ b/src/Asmin/Asmin.Packages.AOP/Asmin.Packages.AOP.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.2.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.1.0" />
     <PackageReference Include="Castle.Core" Version="4.4.0" />
   </ItemGroup>
 
