--- a/src/Asmin/Asmin.WebMVC/Asmin.WebMVC.csproj
+++ b/src/Asmin/Asmin.WebMVC/Asmin.WebMVC.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\Asmin.Business\Asmin.Business.csproj" />
     <ProjectReference Include="..\Asmin.Core\Asmin.Core.csproj" />
     <ProjectReference Include="..\Asmin.Entities\Asmin.Entities.csproj" />
+    <ProjectReference Include="..\Asmin.Packages.AOP\Asmin.Packages.AOP.csproj" />
   </ItemGroup>
 
 
