--- a/src/Asmin/Asmin.Packages.AOP/Asmin.Packages.AOP.csproj
+++ b/src/Asmin/Asmin.Packages.AOP/Asmin.Packages.AOP.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.2.0" />
-    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.1.0" />
-    <PackageReference Include="Castle.Core" Version="4.4.0" />
+    <PackageReference Include="Autofac" Version="6.1.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
+    <PackageReference Include="Castle.Core" Version="4.4.1" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
   </ItemGroup>
 
 </Project>
