--- a/src/Asmin/Asmin.Core/appsettings.staging.json
+++ b/src/Asmin/Asmin.Core/appsettings.staging.json
@@ -15,5 +15,8 @@
     "EndPoint": "miniohost",
     "AccessKey": "accesskey",
     "SecretKey": "secretkey"
+  },
+  "ConnectionStrings": {
+    "ConnectionString": "server=localhost;user=root;password=12345;database=asmin"
   }
 }
