Changed cache key and added some summary.

--- a/src/Asmin/Asmin.Entities/Asmin.Entities.csproj
+++ b/src/Asmin/Asmin.Entities/Asmin.Entities.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Asmin.Core\Asmin.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CustomEntities\Response\" />
+  </ItemGroup>
+
 </Project>
