--- a/src/Asmin/Asmin.Core/appsettings.production.json
+++ b/src/Asmin/Asmin.Core/appsettings.production.json
@@ -18,5 +18,9 @@
   },
   "ConnectionStrings": {
     "ConnectionString": "server=localhost;user=root;password=12345;database=asmin"
+  },
+  "JWT": {
+    "Key": "Asmin is sweet .NET Core project boilerplate. <3",
+    "ExpiryHour": 24
   }
 }
