--- a/src/Asmin/Asmin.Core/appsettings.production.json
+++ b/src/Asmin/Asmin.Core/appsettings.production.json
@@ -21,6 +21,8 @@
   },
   "JWT": {
     "Key": "Asmin is sweet .NET Core project boilerplate. <3",
+    "Issuer": "Asmin",
+    "Audience": "Asmin",
     "ExpiryHour": 24
   }
 }
