--- a/src/Asmin/Asmin.Packages.JWT/Asmin.Packages.JWT.csproj
+++ b/src/Asmin/Asmin.Packages.JWT/Asmin.Packages.JWT.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.1.0" />
   </ItemGroup>
