The IRedisCacheService interface has been extended. It can provides base cache service behaivour

--- a/src/Asmin/Asmin.Packages.Caching.Redis/Asmin.Packages.Caching.Redis.csproj
+++ b/src/Asmin/Asmin.Packages.Caching.Redis/Asmin.Packages.Caching.Redis.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Asmin.Packages.Caching.Core\Asmin.Packages.Caching.Core.csproj" />
+  </ItemGroup>
+
 </Project>
