Removed Business, Autofac and other package dependencies 🎉

--- a/src/Asmin/Asmin.WebMVC/Asmin.WebMVC.csproj
+++ b/src/Asmin/Asmin.WebMVC/Asmin.WebMVC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -16,11 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Asmin.Business\Asmin.Business.csproj" />
     <ProjectReference Include="..\Asmin.Core\Asmin.Core.csproj" />
     <ProjectReference Include="..\Asmin.Entities\Asmin.Entities.csproj" />
-    <ProjectReference Include="..\Asmin.Packages.AOP\Asmin.Packages.AOP.csproj" />
-    <ProjectReference Include="..\Asmin.Packages.Hashing.MD5\Asmin.Packages.Hashing.MD5.csproj" />
   </ItemGroup>
 
 
